--- a/lib/src/stylesheets/tek.themes.less/clean.less
+++ b/lib/src/stylesheets/tek.themes.less/clean.less
@@ -1,6 +1,6 @@
-@import "../tek.less";
-@import "../tek.compoment.less";
-
+@import "../tek";
+@import "../tek.component.less";
+//clean theme
 .theme-clean(@base, @main, @accent) {
   color: @black;
   background-color: @base;
