--- a/test/style/stylesheets/test-theme-clean.less
+++ b/test/style/stylesheets/test-theme-clean.less
@@ -1,4 +1,4 @@
-@import "../../../dist/styleheets/tek.less";
+@import "../../../lib/src/stylesheets/tek";
 @import "../../../dist/styleheets/tek.themes.less";
 
 @base: #FEFEFE;
