--- a/test/style/stylesheets/test-theme-clean.less
+++ b/test/style/stylesheets/test-theme-clean.less
@@ -1,5 +1,5 @@
 @import "../../../lib/src/stylesheets/tek";
-@import "../../../dist/styleheets/tek.themes.less";
+@import "../../../dist/stylesheets/tek.themes.css";
 
 @base: #FEFEFE;
 @main: #777;
