--- a/lib/src/stylesheets/tek-style-clean.less/02.theme.less
+++ b/lib/src/stylesheets/tek-style-clean.less/02.theme.less
@@ -17,9 +17,14 @@ body {
 }
 /*
   <h3>header</h3>
+
   ```
     <header>
        <h3 class="inline-logo">logo</h3>
+       <nav>
+          <a class="nav-item" href="">nav-item01</a>
+          <a class="nav-item" href="">nav-item02</a>
+       </nav>
     </header>
   ```
 */
@@ -81,7 +86,10 @@ table {
 /*
   <h3>.btn</h3>
   ```
-    <a class="btn">btn</a>
+    <div>
+      <a class="btn">btn</a>
+      <a class="primary-btn">primary-btn</a>
+    </div>
   ```
 */
 .btn {
@@ -91,7 +99,7 @@ table {
 .primary-btn {
   .btn(@accent);
 }
-
+1
 .logo {
   margin: 2px 10px;
   opacity: 0.5;
@@ -117,6 +125,7 @@ table {
 .block-list-header {
   @back: desaturate(darken(@accent, 30), 20);
   .block-list-header(@back);
+  color:darken(@white,10);
 }
 
 .block-list {
