--- a/lib/src/stylesheets/jquery.treeview.less/01.css
+++ b/lib/src/stylesheets/jquery.treeview.less/01.css
@@ -1,178 +1,3 @@
-.rich .photo {
-  display: inline-block;
-  margin: 5px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -o-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -o-border-radius: 3px;
-  -ms-border-radius: 3px;
-  border-radius: 3px;
-  border: 1px solid #e6e6e6;
-  padding: 16px 12px 45px;
-  position: relative;
-}
-.rich .photo:hover {
-  cursor: pointer;
-  -webkit-box-shadow: 0 0 20px #ffff33;
-  -moz-box-shadow: 0 0 20px #ffff33;
-  -o-box-shadow: 0 0 20px #ffff33;
-  -ms-box-shadow: 0 0 20px #ffff33;
-  box-shadow: 0 0 20px #ffff33;
-  top: -1px;
-}
-.rich .photo:hover .photo-inner:after {
-  background-color: rgba(255, 255, 51, 0.040000000000000036);
-}
-.rich .photo:active {
-  -webkit-box-shadow: 0 0 60px #ffff33;
-  -moz-box-shadow: 0 0 60px #ffff33;
-  -o-box-shadow: 0 0 60px #ffff33;
-  -ms-box-shadow: 0 0 60px #ffff33;
-  box-shadow: 0 0 60px #ffff33;
-  position: relative;
-  top: -2px;
-}
-.rich .photo:active .photo-inner:after {
-  background-color: rgba(255, 255, 255, 0.1);
-}
-.rich .photo.selected {
-  -webkit-box-shadow: 0 0 40px #ffff33;
-  -moz-box-shadow: 0 0 40px #ffff33;
-  -o-box-shadow: 0 0 40px #ffff33;
-  -ms-box-shadow: 0 0 40px #ffff33;
-  box-shadow: 0 0 40px #ffff33;
-}
-.rich .photo-inner {
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -o-border-radius: 3px;
-  -ms-border-radius: 3px;
-  border-radius: 3px;
-  background-color: #d6d6d6;
-  width: 220px;
-  height: 200px;
-  border: 1px solid #cfcfcf;
-  -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2) inset;
-  -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2) inset;
-  -o-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2) inset;
-  -ms-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2) inset;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2) inset;
-  overflow: hidden;
-}
-.rich .photo-inner:after {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 10;
-  content: '';
-  text-align: center;
-  background-color: transparent;
-}
-.rich .paper {
-  position: relative;
-  margin: 5px;
-  padding: 0;
-  -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
-  -moz-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
-  -o-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
-  -ms-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
-  color: #4d4d4d;
-}
-.rich .paper:before,
-.rich .paper:after {
-  content: '';
-  width: 50%;
-  height: 20%;
-  bottom: 15px;
-  position: absolute;
-  z-index: 1;
-  background-color: rgba(0, 0, 0, 0.7);
-  -webkit-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7);
-  -moz-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7);
-  -o-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7);
-  -ms-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7);
-  box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7);
-}
-.rich .paper:before {
-  left: 4px;
-  -webkit-transform: rotate(-3deg);
-  -moz-transform: rotate(-3deg);
-  -o-transform: rotate(-3deg);
-  -ms-transform: rotate(-3deg);
-  transform: rotate(-3deg);
-}
-.rich .paper:after {
-  right: 10px;
-  -webkit-transform: rotate(3deg);
-  -moz-transform: rotate(3deg);
-  -o-transform: rotate(3deg);
-  -ms-transform: rotate(3deg);
-  transform: rotate(3deg);
-}
-.rich .paper-content {
-  position: relative;
-  z-index: 5;
-  background-color: #FFF;
-  border: 1px solid #f0f0f0;
-  padding: 5px 20px 15px;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  -o-border-radius: 2px;
-  -ms-border-radius: 2px;
-  border-radius: 2px;
-  min-width: 120px;
-  min-height: 40px;
-}
-.rich .paper-content.taped:before,
-.rich .paper-content.taped:after {
-  content: "";
-  position: absolute;
-  background-color: rgba(255, 255, 255, 0.35);
-  width: 85px;
-  height: 30px;
-  top: 0;
-  -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-  -o-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-  -ms-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-}
-.rich .paper-content.taped:before {
-  left: -20px;
-  -webkit-transform: rotate(-15deg);
-  -moz-transform: rotate(-15deg);
-  -o-transform: rotate(-15deg);
-  -ms-transform: rotate(-15deg);
-  transform: rotate(-15deg);
-}
-.rich .paper-content.taped:after {
-  right: -20px;
-  -webkit-transform: rotate(15deg);
-  -moz-transform: rotate(15deg);
-  -o-transform: rotate(15deg);
-  -ms-transform: rotate(15deg);
-  transform: rotate(15deg);
-}
-.rich .paper-title {
-  font-size: 1.5em;
-  margin: 10px 0;
-  color: #999999;
-}
-.rich .paper-title-lead {
-  opacity: 0.6;
-  font-weight: bold;
-  padding: 2px 0;
-  font-size: 12px;
-  display: block;
-  font-style: italic;
-}
 .tv-item {
   list-style: none;
   background-color: #ffffff;
@@ -198,4 +23,7 @@
   background-color: #473aff;
   border-color: #1707ff;
   cursor: default;
+}
+.tv-closed > .tv-children {
+  display: none;
 }
