--- a/lib/src/stylesheets/jquery.treeview.less/01.css
+++ b/lib/src/stylesheets/jquery.treeview.less/01.css
@@ -1,29 +1,143 @@
+/* <h3>color variables</h3>
+
+  ```
+    <p>
+      <span class="colored-box color-white">@white</span>
+      <span class="colored-box color-silver">@silver</span>
+      <span class="colored-box color-black">@black</span>
+      <span class="colored-box color-gray">@gray</span>
+      <span class="colored-box color-red">@red</span>
+      <span class="colored-box color-pink">@pink</span>
+      <span class="colored-box color-yellow">@yellow</span>
+      <span class="colored-box color-orange">@orange</span>
+      <span class="colored-box color-brown">@brown</span>
+      <span class="colored-box color-green">@green</span>
+      <span class="colored-box color-blue">@blue</span>
+      <span class="colored-box color-purple">@purple</span>
+      <span class="colored-box color-cyan">@cyan</span>
+    </p>
+  ```
+*/
+/* <h3>media size</h3>
+   <p>
+     <dl>
+        <dt><b>@phonePortrait</b></dt>
+        <dd>phone size when put vertical</dd>
+        <dt><b>@phoneLandscape</b></dt>
+        <dd>phone size when put horizontal</dd>
+        <dt><b>@tabletPortrait</b></dt>
+        <dd>tablet size when put vertical</dd>
+        <dt><b>@tabletLandscape</b></dt>
+        <dd>tablet size when put horizontal</dd>
+     </dl>
+   </p>
+*/
+/*
+  <h3>linear gradient</h3>
+  <p>
+    .linear-gradient(@blue, darken(@blue, 30));
+  </p>
+  ```
+    <div class="blue-gradient gradient-box"></div>
+  ```
+*/
+/*
+  <h3>radial gradient</h3>
+  <p>
+    .radial-gradient(20%, 40%, @green, darken(@green, 50));
+  </p>
+  ```
+    <div class="green-radial-gradient radial-gradient-box"></div>
+  ```
+*/
+/*
+  <h3>stripe</h3>
+  <p>
+    .stripe(40px, lighten(@orange, 20));
+  </p>
+
+  ```
+    <div class="stripe-box orange-stripe"></div>
+
+  ```
+*/
+/*
+  <h3>rotate</h3>
+  <p>
+  .rotate(45deg);
+  </p>
+  ```
+    <div class="box rotate45"></div>
+  ```
+*/
+/*
+  <h3>skew</h3>
+  <p>
+    .skew(30deg);
+  </p>
+  ```
+    <div class="box skew30"></div>
+  ```
+ */
+.tv-root {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 .tv-item {
   list-style: none;
-  background-color: #ffffff;
-  border-color: #e6e6e6;
   margin-bottom: -1px;
+  position: relative;
 }
 .tv-label {
   padding: 5px 10px;
   display: block;
   cursor: pointer;
+  background-color: #ffffff;
+  border: 1px solid #f5f5f5;
+  position: relative;
 }
 .tv-label:hover {
-  background-color: #d6d3ff;
-  border-color: #a6a0ff;
+  background-color: #e0d8ff;
+  border-color: #b8a5ff;
+  z-index: 99;
 }
 .tv-label:active {
   color: #ffffff;
-  background-color: #473aff;
-  border-color: #1707ff;
+  background-color: #8c6dff;
+  border-color: #7c58ff;
 }
 .tv-selected > .tv-label {
   color: #ffffff;
-  background-color: #473aff;
-  border-color: #1707ff;
+  background-color: #9477ff;
+  border-color: #8463ff;
   cursor: default;
 }
 .tv-closed > .tv-children {
   display: none;
+}
+.tv-openable > .tv-label:before {
+  border: 7px solid transparent;
+  width: 0;
+  height: 0;
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+  content: '';
+  margin: 2px 5px 2px 0;
+  border-top-color: #333333;
+  border-bottom-width: 0;
+  opacity: 0.5;
+}
+.tv-openable.tv-closed > .tv-label:before {
+  border: 7px solid transparent;
+  width: 0;
+  height: 0;
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+  content: '';
+  border-left-color: #333333;
 }
