--- a/lib/src/stylesheets/jquery.treeview.less/01.css
+++ b/lib/src/stylesheets/jquery.treeview.less/01.css
@@ -90,6 +90,7 @@
   list-style: none;
   margin-bottom: -1px;
   position: relative;
+  width: 100%;
 }
 .tv-label {
   padding: 5px 10px;
@@ -143,4 +144,28 @@
   content: '';
   border-left-color: #333333;
   margin-left: 5px;
+}
+.ui-draggable-dragging {
+  -webkit-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+  -o-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+  -ms-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+  z-index: 999;
+  opacity: 0.8;
+}
+.ui-draggable-dragging .tv-label {
+  background-color: #ffffff;
+  color: #333333;
+  cursor: -moz-grabbing;
+  cursor: -webkit-grabbing;
+  cursor: -o-grabbing;
+  cursor: -ms-grabbing;
+  cursor: grabbing;
+}
+.ui-draggable-dragging .tv-label .tv-children {
+  opacity: 0.5;
+}
+.tv-drag-origin {
+  opacity: 0.8;
 }
