add browser fallbacks

--- a/lib/src/stylesheets/tek-mixin.less/04.component.less
+++ b/lib/src/stylesheets/tek-mixin.less/04.component.less
@@ -179,3 +179,13 @@
     }
   }
 }
+
+
+.block-table(){
+  width:100%;
+  thead,tbody,tfoot,
+  tr,th,td{
+    display: block;
+    width:100%;
+  }
+}
