--- a/test/browser/stylesheets/test-style-night.css
+++ b/test/browser/stylesheets/test-style-night.css
@@ -132,6 +132,13 @@
   cursor: -ms-grabbing;
   cursor: grabbing;
 }
+.grabbable:active {
+  cursor: -moz-grabbing;
+  cursor: -webkit-grabbing;
+  cursor: -o-grabbing;
+  cursor: -ms-grabbing;
+  cursor: grabbing;
+}
 /*******************
  *  positioning
  *******************/
@@ -220,12 +227,102 @@
     display: block;
     width: 100%;
   }
+  table thead,
+  table tbody,
+  table tfoot,
+  table tr,
+  table th,
+  table td {
+    display: block;
+    width: 100%;
+  }
 }
+/* <h3>color variables</h3>
+
+  ```
+    <p>
+      <span class="colored-box color-white">@white</span>
+      <span class="colored-box color-silver">@silver</span>
+      <span class="colored-box color-black">@black</span>
+      <span class="colored-box color-gray">@gray</span>
+      <span class="colored-box color-red">@red</span>
+      <span class="colored-box color-pink">@pink</span>
+      <span class="colored-box color-yellow">@yellow</span>
+      <span class="colored-box color-orange">@orange</span>
+      <span class="colored-box color-brown">@brown</span>
+      <span class="colored-box color-green">@green</span>
+      <span class="colored-box color-blue">@blue</span>
+      <span class="colored-box color-purple">@purple</span>
+      <span class="colored-box color-cyan">@cyan</span>
+    </p>
+  ```
+*/
+/* <h3>media size</h3>
+   <p>
+     <dl>
+        <dt><b>@phonePortrait</b></dt>
+        <dd>phone size when put vertical</dd>
+        <dt><b>@phoneLandscape</b></dt>
+        <dd>phone size when put horizontal</dd>
+        <dt><b>@tabletPortrait</b></dt>
+        <dd>tablet size when put vertical</dd>
+        <dt><b>@tabletLandscape</b></dt>
+        <dd>tablet size when put horizontal</dd>
+     </dl>
+   </p>
+*/
+/*
+  <h3>linear gradient</h3>
+  <p>
+    .linear-gradient(@blue, darken(@blue, 30));
+  </p>
+  ```
+    <div class="blue-gradient gradient-box"></div>
+  ```
+*/
+/*
+  <h3>radial gradient</h3>
+  <p>
+    .radial-gradient(20%, 40%, @green, darken(@green, 50));
+  </p>
+  ```
+    <div class="green-radial-gradient radial-gradient-box"></div>
+  ```
+*/
+/*
+  <h3>stripe</h3>
+  <p>
+    .stripe(40px, lighten(@orange, 20));
+  </p>
+
+  ```
+    <div class="stripe-box orange-stripe"></div>
+
+  ```
+*/
+/*
+  <h3>rotate</h3>
+  <p>
+  .rotate(45deg);
+  </p>
+  ```
+    <div class="box rotate45"></div>
+  ```
+*/
+/*
+  <h3>skew</h3>
+  <p>
+    .skew(30deg);
+  </p>
+  ```
+    <div class="box skew30"></div>
+  ```
+ */
 body {
-  background-color: #ffffff;
+  background-color: #222240;
   font-family: monospace;
   padding: 50px;
-  color: #666666;
+  color: #999999;
 }
 /*
   <h3>header</h3>
@@ -241,7 +338,7 @@ body {
   ```
 */
 header {
-  background-color: #f2f2f2;
+  background-color: #19192f;
   position: absolute;
   left: 0;
   top: 0;
@@ -261,6 +358,7 @@ header {
 header .inline-logo {
   font-size: 1.2em;
   margin: 5px 10px;
+  color: #764100;
 }
 nav {
   display: inline-block;
@@ -275,6 +373,15 @@ nav {
 .nav-item:hover {
   text-decoration: none;
 }
+.nav-item:hover {
+  text-decoration: none;
+}
+.nav-item:hover {
+  text-decoration: none;
+}
+.nav-item:hover {
+  text-decoration: none;
+}
 /*
   <h3>a</h3>
   ```
@@ -284,6 +391,9 @@ nav {
 a {
   color: #3333ff;
   text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
 }
 a:hover {
   text-decoration: underline;
@@ -315,16 +425,30 @@ table {
 table th,
 table td {
   padding: 5px 10px;
-  background-color: #ffffff;
-  border: 1px solid #f5f5f5;
+  background-color: #292929;
+  border: 1px solid #1f1f1f;
 }
 table th {
-  background-color: #f7f7f7;
-  background-image: -webkit-linear-gradient(#ffffff,#f7f7f7);
-  background-image: -moz-linear-gradient(#ffffff,#f7f7f7);
-  background-image: -o-linear-gradient(#ffffff,#f7f7f7);
-  background-image: -ms-linear-gradient(#ffffff,#f7f7f7);
-  background-image: linear-gradient(#ffffff,#f7f7f7);
+  background-color: #212121;
+  background-image: -webkit-linear-gradient(#292929,#212121);
+  background-image: -moz-linear-gradient(#292929,#212121);
+  background-image: -o-linear-gradient(#292929,#212121);
+  background-image: -ms-linear-gradient(#292929,#212121);
+  background-image: linear-gradient(#292929,#212121);
+}
+table th,
+table td {
+  padding: 5px 10px;
+  background-color: #292929;
+  border: 1px solid #1f1f1f;
+}
+table th {
+  background-color: #212121;
+  background-image: -webkit-linear-gradient(#292929,#212121);
+  background-image: -moz-linear-gradient(#292929,#212121);
+  background-image: -o-linear-gradient(#292929,#212121);
+  background-image: -ms-linear-gradient(#292929,#212121);
+  background-image: linear-gradient(#292929,#212121);
 }
 /*
   <h3>.btn</h3>
@@ -337,13 +461,13 @@ table th {
 */
 .btn {
   display: inline-block;
-  background-color: #e6e6e6;
-  background-image: -webkit-linear-gradient(#ffffff,#e6e6e6);
-  background-image: -moz-linear-gradient(#ffffff,#e6e6e6);
-  background-image: -o-linear-gradient(#ffffff,#e6e6e6);
-  background-image: -ms-linear-gradient(#ffffff,#e6e6e6);
-  background-image: linear-gradient(#ffffff,#e6e6e6);
-  border: 1px solid #e0e0e0;
+  background-color: #10101f;
+  background-image: -webkit-linear-gradient(#222240,#10101f);
+  background-image: -moz-linear-gradient(#222240,#10101f);
+  background-image: -o-linear-gradient(#222240,#10101f);
+  background-image: -ms-linear-gradient(#222240,#10101f);
+  background-image: linear-gradient(#222240,#10101f);
+  border: 1px solid #0d0d18;
   -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
   -o-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
@@ -356,27 +480,28 @@ table th {
   border-radius: 5px;
   padding: 0.5em 1em;
   cursor: pointer;
-  color: #4d4d4d;
+  color: #000000;
   -webkit-user-select: none;
   -moz-user-select: none;
   -o-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  color: #b3b3b3;
 }
 .btn:hover {
-  background-color: #f0f0f0;
-  background-image: -webkit-linear-gradient(#ffffff,#f0f0f0);
-  background-image: -moz-linear-gradient(#ffffff,#f0f0f0);
-  background-image: -o-linear-gradient(#ffffff,#f0f0f0);
-  background-image: -ms-linear-gradient(#ffffff,#f0f0f0);
-  background-image: linear-gradient(#ffffff,#f0f0f0);
+  background-color: #17172c;
+  background-image: -webkit-linear-gradient(#27274a,#17172c);
+  background-image: -moz-linear-gradient(#27274a,#17172c);
+  background-image: -o-linear-gradient(#27274a,#17172c);
+  background-image: -ms-linear-gradient(#27274a,#17172c);
+  background-image: linear-gradient(#27274a,#17172c);
   -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   -o-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   -ms-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-  border-color: #ebebeb;
-  color: #333333;
+  border-color: #141425;
+  color: #000000;
   text-decoration: none;
 }
 .btn:active,
@@ -387,17 +512,46 @@ table th {
   -ms-box-shadow: none;
   box-shadow: none;
   background-image: none;
-  color: #808080;
+  color: #000000;
+}
+.btn:hover {
+  background-color: #17172c;
+  background-image: -webkit-linear-gradient(#27274a,#17172c);
+  background-image: -moz-linear-gradient(#27274a,#17172c);
+  background-image: -o-linear-gradient(#27274a,#17172c);
+  background-image: -ms-linear-gradient(#27274a,#17172c);
+  background-image: linear-gradient(#27274a,#17172c);
+  -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  -o-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  -ms-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  border-color: #141425;
+  color: #000000;
+  text-decoration: none;
+}
+.btn:active,
+.btn.active {
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  -o-box-shadow: none;
+  -ms-box-shadow: none;
+  box-shadow: none;
+  background-image: none;
+  color: #000000;
+}
+.btn:hover {
+  color: #b3b3b3;
 }
 .primary-btn {
   display: inline-block;
-  background-color: #cc5200;
-  background-image: -webkit-linear-gradient(#ff6600,#cc5200);
-  background-image: -moz-linear-gradient(#ff6600,#cc5200);
-  background-image: -o-linear-gradient(#ff6600,#cc5200);
-  background-image: -ms-linear-gradient(#ff6600,#cc5200);
-  background-image: linear-gradient(#ff6600,#cc5200);
-  border: 1px solid #c24e00;
+  background-color: #ff9410;
+  background-image: -webkit-linear-gradient(#ffab43,#ff9410);
+  background-image: -moz-linear-gradient(#ffab43,#ff9410);
+  background-image: -o-linear-gradient(#ffab43,#ff9410);
+  background-image: -ms-linear-gradient(#ffab43,#ff9410);
+  background-image: linear-gradient(#ffab43,#ff9410);
+  border: 1px solid #ff9006;
   -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
   -o-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
@@ -418,18 +572,18 @@ table th {
   user-select: none;
 }
 .primary-btn:hover {
-  background-color: #e05a00;
-  background-image: -webkit-linear-gradient(#ff6f0f,#e05a00);
-  background-image: -moz-linear-gradient(#ff6f0f,#e05a00);
-  background-image: -o-linear-gradient(#ff6f0f,#e05a00);
-  background-image: -ms-linear-gradient(#ff6f0f,#e05a00);
-  background-image: linear-gradient(#ff6f0f,#e05a00);
+  background-color: #ff9d24;
+  background-image: -webkit-linear-gradient(#ffb252,#ff9d24);
+  background-image: -moz-linear-gradient(#ffb252,#ff9d24);
+  background-image: -o-linear-gradient(#ffb252,#ff9d24);
+  background-image: -ms-linear-gradient(#ffb252,#ff9d24);
+  background-image: linear-gradient(#ffb252,#ff9d24);
   -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   -o-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   -ms-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-  border-color: #d65600;
+  border-color: #ff991a;
   color: #000000;
   text-decoration: none;
 }
@@ -441,7 +595,33 @@ table th {
   -ms-box-shadow: none;
   box-shadow: none;
   background-image: none;
+  color: #432500;
+}
+.primary-btn:hover {
+  background-color: #ff9d24;
+  background-image: -webkit-linear-gradient(#ffb252,#ff9d24);
+  background-image: -moz-linear-gradient(#ffb252,#ff9d24);
+  background-image: -o-linear-gradient(#ffb252,#ff9d24);
+  background-image: -ms-linear-gradient(#ffb252,#ff9d24);
+  background-image: linear-gradient(#ffb252,#ff9d24);
+  -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  -o-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  -ms-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  border-color: #ff991a;
   color: #000000;
+  text-decoration: none;
+}
+.primary-btn:active,
+.primary-btn.active {
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  -o-box-shadow: none;
+  -ms-box-shadow: none;
+  box-shadow: none;
+  background-image: none;
+  color: #432500;
 }
 1 .logo {
   margin: 2px 10px;
@@ -465,13 +645,12 @@ table th {
   ```
 */
 .block-list-header {
-  background-color: #5c2b0a;
-  background-color: #371a06;
-  background-image: -webkit-linear-gradient(#5c2b0a,#371a06);
-  background-image: -moz-linear-gradient(#5c2b0a,#371a06);
-  background-image: -o-linear-gradient(#5c2b0a,#371a06);
-  background-image: -ms-linear-gradient(#5c2b0a,#371a06);
-  background-image: linear-gradient(#5c2b0a,#371a06);
+  background-color: #000000;
+  background-image: -webkit-linear-gradient(#000000,#000000);
+  background-image: -moz-linear-gradient(#000000,#000000);
+  background-image: -o-linear-gradient(#000000,#000000);
+  background-image: -ms-linear-gradient(#000000,#000000);
+  background-image: linear-gradient(#000000,#000000);
   padding: 5px 15px;
   -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
@@ -488,13 +667,13 @@ table th {
   list-style: none;
   padding: 5px 15px;
   margin-bottom: -1px;
-  border: 1px solid #e6e6e6;
-  background-color: #ffffff;
+  border: 1px solid #dedede;
+  background-color: #f7f7f7;
   position: relative;
 }
 .block-list li:hover {
-  background-color: rgba(255, 102, 0, 0.09999999999999998);
-  border-color: rgba(204, 82, 0, 0.09999999999999998);
+  background-color: rgba(102, 102, 102, 0.09999999999999998);
+  border-color: rgba(77, 77, 77, 0.09999999999999998);
   z-index: 99;
 }
 .block-list li:hover .block-list-item-control {
@@ -502,9 +681,36 @@ table th {
 }
 .block-list li:active {
   color: #ffffff;
-  background-color: #ff6600;
-  border-color: #cc5200;
+  background-color: #666666;
+  border-color: #4d4d4d;
 }
 .block-list li .block-list-item-control {
   opacity: 0.1;
+}
+.block-list li {
+  list-style: none;
+  padding: 5px 15px;
+  margin-bottom: -1px;
+  border: 1px solid #dedede;
+  background-color: #f7f7f7;
+  position: relative;
+}
+.block-list li:hover {
+  background-color: rgba(102, 102, 102, 0.09999999999999998);
+  border-color: rgba(77, 77, 77, 0.09999999999999998);
+  z-index: 99;
+}
+.block-list li:hover .block-list-item-control {
+  opacity: 1;
+}
+.block-list li:active {
+  color: #ffffff;
+  background-color: #666666;
+  border-color: #4d4d4d;
+}
+.block-list li .block-list-item-control {
+  opacity: 0.1;
+}
+.block-list li:hover {
+  color: #ffffff;
 }
