--- a/lib/src/stylesheets/jquery.flowchart.less/01.less
+++ b/lib/src/stylesheets/jquery.flowchart.less/01.less
@@ -11,6 +11,7 @@
   .box-shadow(5px 5px 10px; 0.4; inset);
   margin: 0 auto;
   padding: 20px;
+  .box-sizing(border-box);
   position: relative;
 
 }
@@ -24,6 +25,7 @@
   border: 2px solid darken(@back, 20);
   .border-radius(4px);
   margin: 2px 4px;
+  .box-sizing(border-box);
   .box-shadow(1px 1px 2px; 0.4);
   .grabbable();
   &.ui-draggable-dragging {
