--- a/lib/src/stylesheets/tek-style-clean.less/02.theme.less
+++ b/lib/src/stylesheets/tek-style-clean.less/02.theme.less
@@ -6,7 +6,7 @@
 
 @base: @white;
 @main: @gray;
-@accent: @orange;
+@accent: darken(@blue, 4);
 @color: lighten(@black, 20);
 
 body {
@@ -15,6 +15,7 @@ body {
   padding: 50px;
   color: @color;
 }
+
 /*
   <h3>header</h3>
 
@@ -98,7 +99,9 @@ table {
 
 .primary-btn {
   .btn(@accent);
+  color: @white;
 }
+
 1
 .logo {
   margin: 2px 10px;
@@ -112,6 +115,7 @@ table {
     }
   }
 }
+
 /*
   <h3>.block-list</3>
   ```
@@ -125,9 +129,42 @@ table {
 .block-list-header {
   @back: desaturate(darken(@accent, 30), 20);
   .block-list-header(@back);
-  color:darken(@white,10);
+  color: darken(@white, 10);
 }
 
 .block-list {
   .block-list(white, @accent);
+}
+
+/*
+  <h3>.tab</h3>
+  ```
+  <div>
+    <a class="tab">tab00</a>
+    <a class="tab">tab01</a>
+    <a class="tab tab-selected">tab02</a>
+    <a class="tab tab-disabled">tab03</a>
+  </div>
+  ```
+*/
+.tab {
+  .tab();
+  &.tab-selected,
+  &.tab-selected:hover,
+  &.tab-selected:active {
+    @back: darken(desaturate(@accent, 30), 10);
+    cursor: default;
+    background-color: @back;
+    border-color: @back;
+    color: @white;
+  }
+  &.tab-disabled,
+  &.tab-disabled:hover,
+  &.tab-disabled:active {
+    cursor: default;
+    @back: lighten(@gray, 20);
+    background-color: @back;
+    border-color: @back;
+    color: lighten(@back, 20);
+  }
 }
