--- a/lib/src/stylesheets/tek-style-clean.less/02.theme.css
+++ b/lib/src/stylesheets/tek-style-clean.less/02.theme.css
@@ -302,6 +302,9 @@ table th {
   background-image: none;
   color: #00001f;
 }
+.primary-btn:hover {
+  color: #ffffff;
+}
 1 .logo {
   margin: 2px 10px;
   opacity: 0.5;
