--- a/lib/src/stylesheets/tek-mixin.less/04.component.less
+++ b/lib/src/stylesheets/tek-mixin.less/04.component.less
@@ -234,3 +234,15 @@
     border-color:@back;
   }
 }
+.fixed-tab(@back:@gray;@color:@white){
+  background-color: @back;
+  border-color: @back;
+  color: @color;
+  &:hover,
+  &:active{
+    cursor: default;
+    background-color: @back;
+    border-color: @back;
+    color: @color;
+  }
+}
