--- a/lib/src/stylesheets/jquery.spreadsheet.less/01.css
+++ b/lib/src/stylesheets/jquery.spreadsheet.less/01.css
@@ -79,3 +79,52 @@
     <div class="box skew30"></div>
   ```
  */
+.ss-root {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.ss-scrollable {
+  width: 100%;
+  height: 100%;
+  overflow-x: auto;
+}
+.ss-th-hover {
+  background-color: #ffffff;
+  background-image: none;
+}
+.ss-th {
+  color: #999999;
+}
+.ss-tbody-row .ss-cell {
+  background-color: #ffffff;
+  position: relative;
+}
+.ss-tbody-row .ss-cell:hover {
+  background-color: #ffffcc;
+  z-index: 200;
+  border-color: #ffffb8;
+  color: #666600;
+}
+.ss-tbody-row:nth-child(even) .ss-cell {
+  background-color: #fcfcfc;
+  position: relative;
+}
+.ss-tbody-row:nth-child(even) .ss-cell:hover {
+  background-color: #ffffcc;
+  z-index: 200;
+  border-color: #ffffb8;
+  color: #666600;
+}
+.ss-left-fixed-table {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  z-index: 999;
+  -webkit-box-shadow: 1px 1px 1px rgba(100, 100, 100, 0.1);
+  -moz-box-shadow: 1px 1px 1px rgba(100, 100, 100, 0.1);
+  -o-box-shadow: 1px 1px 1px rgba(100, 100, 100, 0.1);
+  -ms-box-shadow: 1px 1px 1px rgba(100, 100, 100, 0.1);
+  box-shadow: 1px 1px 1px rgba(100, 100, 100, 0.1);
+}
