--- a/lib/src/stylesheets/jquery.spreadsheet.less/01.less
+++ b/lib/src/stylesheets/jquery.spreadsheet.less/01.less
@@ -1,1 +1,55 @@
 @import "../../../../dist/stylesheets/tek-mixin";
+
+.ss-root {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.ss-scrollable {
+  width: 100%;
+  height: 100%;
+  overflow-x: auto;
+}
+
+.ss-th-hover {
+  background-color: @white;
+  background-image: none;
+}
+
+.ss-th {
+  color: lighten(@gray, 20);
+}
+
+.ss-tbody-row {
+  @back: @white;
+  @highlight: lighten(@yellow, 30);
+  .ss-cell {
+    .ss-cell(darken(@back, 0), @highlight);
+  }
+  &:nth-child(even) {
+    .ss-cell {
+      .ss-cell(darken(@back, 1), @highlight);
+    }
+  }
+}
+
+.ss-cell(@back, @highlight) {
+  background-color: @back;
+  position: relative;
+  &:hover {
+    background-color: @highlight;
+    z-index: 200;
+    border-color: darken(@highlight, 4);
+    color: darken(@highlight, 70);
+  }
+}
+
+.ss-left-fixed-table {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  z-index: 999;
+  .box-shadow(1px 1px 1px rgba(100, 100, 100, .1));
+}
