--- a/lib/src/stylesheets/jquery.spreadsheet.less/01.css
+++ b/lib/src/stylesheets/jquery.spreadsheet.less/01.css
@@ -83,6 +83,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 .ss-scrollable {
   width: 100%;
@@ -127,4 +128,17 @@
   -o-box-shadow: 1px 1px 1px rgba(100, 100, 100, 0.1);
   -ms-box-shadow: 1px 1px 1px rgba(100, 100, 100, 0.1);
   box-shadow: 1px 1px 1px rgba(100, 100, 100, 0.1);
+}
+.top-fixed-thead {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  display: none;
+  z-index: 1001;
+}
+.top-fixed-thead th:first-child {
+  display: block;
+  padding: 0;
+  position: relative;
+  z-index: 1001;
 }
