--- a/lib/src/stylesheets/jquery.spreadsheet.less/01.less
+++ b/lib/src/stylesheets/jquery.spreadsheet.less/01.less
@@ -67,7 +67,9 @@
     padding: 0;
     position: relative;
     z-index: 1001;
+    background-color: @white;
   }
+  .box-shadow(1px 1px 2px; .2);
 }
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
