--- a/lib/src/stylesheets/jquery.spreadsheet.less/01.less
+++ b/lib/src/stylesheets/jquery.spreadsheet.less/01.less
@@ -5,12 +5,14 @@
   width: 100%;
   height: 100%;
   overflow-x: hidden;
+  overflow-y:visible;
 }
 
 .ss-scrollable {
   width: 100%;
   height: 100%;
   overflow-x: auto;
+  overflow-y:visible;
 }
 
 .ss-th-hover {
