add browser detection

--- a/lib/src/hbs/tek.view.js/tk-no-support-dialog.hbs
+++ b/lib/src/hbs/tek.view.js/tk-no-support-dialog.hbs
@@ -20,6 +20,9 @@
                      src="http://km.support.apple.com/resources/sites/APPLE/content/live/IMAGES/0/IM26/en_US/safari-72.png"
                      alt=""/>
                 Safari</a></li>
+            <li><a href="http://www.opera.com/">
+                <img class="tk-icon" src="http://d2jc9zwbrclgz3.cloudfront.net/static-heap/da/dafd15591b35d4f81ca96cf7de6582d705850ff0/apple-touch-icon-57x57.png" alt=""/>
+                Opera</a></li>
         </ul>
         </p>
 
