--- a/test/html-tests/stylesheets/test-style-night.css
+++ b/test/html-tests/stylesheets/test-style-night.css
@@ -184,6 +184,11 @@
   z-index: 101;
   content: '';
   text-align: center;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
 }
 /******************
  display
