--- a/lib/src/stylesheets/tek-doc.less/01.tek-mixin.less
+++ b/lib/src/stylesheets/tek-doc.less/01.tek-mixin.less
@@ -77,3 +77,15 @@ p {
   background-color: @orange;
   .stripe(40px, lighten(@orange, 20));
 }
+.red-balloon{
+  .balloon(@red);
+}
+.green-balloon{
+  .balloon(@green);
+}
+.blue-balloon{
+  .balloon(@blue);
+}
+.yellow-balloon{
+  .balloon(@yellow);
+}
