--- a/lib/src/hbs/tek.view.js/tk-spin.hbs
+++ b/lib/src/hbs/tek.view.js/tk-spin.hbs
@@ -1,2 +1,2 @@
-<div style="width:{{width}};height:{{height}};
-        position: absolute;left:{{left}};top:{{top}}"></div>
+<div style="width:{{width}}px;height:{{height}}px;
+        position: absolute;left:{{left}}px;top:{{top}}px"></div>
