--- a/test/html-tests/stylesheets/test-tek.view.css
+++ b/test/html-tests/stylesheets/test-tek.view.css
@@ -79,6 +79,31 @@
     <div class="box skew30"></div>
   ```
  */
+/*
+   <h3>baloon</h3>
+   <p>
+      .red-balloon{
+        .balloon(@red);
+      }
+      .green-balloon{
+        .balloon(@green);
+      }
+      .blue-balloon{
+        .balloon(@blue);
+      }
+      .yellow-balloon{
+        .balloon(@yellow);
+      }
+   </p>
+   ```
+      <div>
+        <div class="red-balloon"> red baloon </div>
+        <div class="green-balloon"> green baloon </div>
+        <div class="blue-balloon"> blue baloon </div>
+        <div class="yellow-balloon"> yellow baloon </div>
+      </div>
+   ```
+*/
 .tk-confirm-dialog {
   z-index: 999;
   position: fixed;
@@ -320,6 +345,11 @@
   z-index: 99;
   content: '';
   text-align: center;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
   text-align: left;
   height: auto;
   color: #552525;
