add word search

--- a/lib/src/stylesheets/tek.view.less/01.base.less
+++ b/lib/src/stylesheets/tek.view.less/01.base.less
@@ -145,6 +145,11 @@
     }
   }
 }
-.tek-text-center{
+.tk-text-center{
   text-align: center;
+}
+
+.tk-hit-word {
+  background-color: lighten(@yellow, 20);
+  color:rgb(88, 53, 20);
 }
