--- a/test/html-tests/stylesheets/test-tek-mixin.less
+++ b/test/html-tests/stylesheets/test-tek-mixin.less
@@ -1,5 +1,7 @@
 @import "../../../lib/src/stylesheets/tek-mixin.less/04.component.less";
-
+body{
+  font-size: 18px;
+}
 section {
   background-color: #AAA;
 }
@@ -11,3 +13,8 @@ section {
   .block-table();
 }
 
+
+
+form{
+  .checkbox-radio-style();
+}
