--- a/lib/src/stylesheets/tek.view.less/01.base.less
+++ b/lib/src/stylesheets/tek.view.less/01.base.less
@@ -196,3 +196,34 @@
     }
   }
 }
+
+.tk-upload-form{
+  @back:@white;
+  @highlight:darken(@yellow, 15);
+  .square(200px);
+  background-color:@back;
+  text-align: center;
+  color: lighten(@black, 20);
+  .box-shadow(2px 2px 4px, 0.4, inset);
+  font-size: 2em;
+  position: relative;
+  font-weight: bold;
+  padding: 20px 0 0;
+  &:hover {
+    font-style: italic;
+  }
+  &.loading {
+    opacity: 0.8;
+  }
+  &.tk-drop-ready{
+    color:@white;
+    background-color: @highlight;
+  }
+
+  [type="file"] {
+    opacity: 0;
+  }
+  .tk-cover{
+    .cover(2);
+  }
+}
